# fwf-examples

./: README.md
samples/ai-crawler-content/: index.html  listing-redacted.html  listing.html
samples/ai-sentiment-analysis-ollama/: package-lock.json  package.json
samples/alter-headers/: README.md
samples/amd-token-generation/: package-lock.json  package.json  readme.md  spin.toml
samples/amd-token-generation/rustimpl/: Cargo.toml
samples/amd-token-generation/rustimpl/src/: amd.rs  lib.rs
samples/block-by-country/: package-lock.json  package.json
samples/block-by-ip/: package-lock.json
samples/bot-redaction/: .gitignore  index.html  listing-redacted.html  listing.html  spin.toml
samples/bulk-redirects/: README.md  spin.toml
samples/geolocation-weather/: README.md  package-lock.json  package.json  spin.toml
samples/image-conversion/: .gitignore  Cargo.toml  README.md  spin.toml  test.sh
samples/image-conversion/.cargo/: config.toml
samples/image-conversion/src/: lib.rs
samples/large-scale-redirects/: .gitignore  Cargo.toml  README.md  build.sh  deploy-apps.sh  deploying-app-per-domain.md  example-fallbacks.json  spin.toml  xlsx2txt.py
samples/limit-access/: package-lock.json  package.json
samples/linode-object-storage-streaming/: package-lock.json  package.json
samples/parse-cookie/: package-lock.json  package.json
samples/read-post/: README.md  package-lock.json  package.json
samples/respond-with-another-site/: package-lock.json  package.json
samples/response-header-modification/: package-lock.json  package.json
(+49 files in other folders)
