[package]
name = "rust-token-generation"
authors = ["Radu Matei <radu@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
spin-sdk = "3.1.0"
url = "2.5.4"
urlencoding = "2.1.3"

[workspace]
